<resources>
    <string name="app_name">اصفهان من</string>
    <string name="titlePlace">مکان های دیدنی</string>
    <string name="place">مکان های دیدنی اصفهان را در اینجا ببینید</string>
    <string name="titleHistory">تاریخچه اصفهان</string>
    <string name="History">تاریخچه اصفهان را در اینجا ببینید</string>
    <string name="titleHandicrafts">صنایع دستی</string>
    <string name="handicrafts">صنایع دستی اصفهان را در اینجا ببینید</string>
    <string name="titleHistoricalMonuments">آثار تاریخی</string>
    <string name="historicalMonuments">آثار تاریخی اصفهان را در اینجا ببینید</string>
    <string name="welcome">به برنامه معرفی شهراصفهان خوش آمدید</string>
    <string name="contactMayor">ارتباط با شهردار</string>
    <string name="about">درباره ما</string>
    <string name="close">خروج</string>
    <string name="titleContactMayor">جهت ارتباط با شهردار متن خود را وارد کنید و روی دکمه ارسال بزنید.</string>
    <string name="send">ارسال</string>
    <string name="phone">09140000000</string>
    <string name="email">79f.mohammadi@gmail.com</string>
    <string name="name">فاطمه محمدی</string>
    <string name="historyText">استان اصفهان دارای قدیمی‌ترین شهرهای ایران می‌باشد. شهر اصفهان را در کتب و اسناد تاریخی به نام‌های آپادانه، آصف‌هان، اسباهان، اسبهان، اسپاتنا، اسپادانا، اسپدانه، اسپهان، اسپینر، اسفاهان، اسفهان، اصباهان، اصپدانه، گابیه، گبی، گی، نصف جهان و یهودیه و … می‌توان یافت.\nشهر اصفهان دارای موزه های متنوع مانند گنجینه هنرهای تزئینی و هنرهای معاصر اصفهان، کاخ موزه چهل ستون، موزه تاریخ طبیعی، موزه آب، موزه حمام علی قلی آقا، باغ موزه پروانه‌ها، موزه شهدای اصفهان و … است.\n</string>
    <string name="historyText2">بیشتر باستان‌شناسان و تاریخ‌نگاران بر این باورند که این منطقه در دوران قبل از اسلام مخصوصاً دوران حکومت ساسانیان، به دلیل اینکه مرکز گرد‌آمدن سپاه بوده و سپاهان ناحیه جنوبی کشور مانند بختیاری، خوزستان، کرمان، سیستان، فارس و غیره در این منطقه جمع می‌شدند.\nآنجا را «اسپهان» گفته، بعد از فتح ایران توسط اعراب به علت آنکه در زبان عربی حرف «پ» وجود ندارد، با گذشت زمان به «اصفهان» تبدیل شده است. \nبراساس نوشته استاد پروداود «ارزش این وجه اشتقاق فقط در این است که می‌رساند در لهجه قدیمی اصفهان، اسباه به معنی سگ نیز بوده است.» \nدر اسناد تاریخی اطلاعات کافی و درستی به طور پیوسته از این شهر وجود ندارد، هرچند همه‌ی تاریخ‌نگاران بر این عقیده‌اند که اصفهان در مرکز فلات ایران قرار داشته است. \nدر محل فعلی شهر آثار تاریخی، باستانی از دوران مختلف به یادگار مانده است، که نشان دهنده‌ی قدمت این شهر است. \nاین شهر تاریخی را به زمان حکومت طهمورث، سومین پادشاه سلسله پیشدادیان نسبت می‌دهند. \nدر زمان کوروش بزرگ در جنگ بابِل یهودیان را از زندان نبوکدنصر شاه بابِل آزاد کرد، تعدادی از آنان به فلسطین رفته، شماری به ایران مهاجرت کردند و در منطقه دارالیهودیه مسکن گزیدند. \nاین منطقه در همسایگی منطقه جی بود که هر دو باهم ترکیب شده و اصفهان را ساختند. در اسناد تاریخی آمده‌ است دلیل انتخاب آن منطقه توسط یهودیان به دلیل مشابه بودن آب و خاک آن با اورشلیم بود. \nیهودیان مقداری از آب و خاک اورشلیم را همراه داشتند و به هر مکان که می‌رسیدند آب و خاک آن را آزمایش می‌کردند. \nبه دستور یزگرد اول در گابای (اصفهان) پادگان نظامی، برای تعلیم و تربیت سپاهان ساخته شد. \nبه نظر می‌رسد نام اسپهان، جاگزین نام گی شد. در سال 442 ه.ق دوران سلجوقی، اصفهان را پس از یک محاصره طولانی و ویرانگر گشود. \nشهر را به دستور مظفر نیشابوری سریعاً بازسازی شد و سه سال از مردم هیچ مالیاتی گرفته نشد. \nمردمی که در جنگ از شهر مهاجرت کرده‌ بودند به خاطر بازسازی و پیشرفت سریع شهر بازگشتند. طغرل حکومت خود را از ری به اصفهان منتقل کرد. \nاصفهان در دوران حکومت ملکشاه به اوج خود رسید آن هم به خاطر تدبیر و هوش وزیرش، خواجه نظام الملک طوسی بود، که باعث شد جمعیت آن دو برابر شود و بناهای زیبایی ساخته شود. \nدر دوران حکومت شاه عباس صفوی پایتخت از قزوین به اصفهان منتقل شد این انتخاب به دلیل علاقه‌مندی پادشاه به طبیعت اصفهان، دوری از مرزها، کاهش قدرت قزلباشان، بهبود تجارت و اقتصاد مملکت، ترس شاه از جانش بود. \nدر این دوران به خاطر شیخ بهایی بناهای متفاوتی با کاربردهای مختلف مانند مسجدها، آب‌انبارها، کاروان‌سراها و … در این شهر ساخته شد. این شهر زیبا در روزگار شاه عباس اول تا مرگ شاه عباس دوم برترین شهر خاورمیانه بود. \nدر زمان ناصرالدین شاه حاکم شهرهای اصفهان و فارس، کردستان و لرستان، یزد به دست مسعودمیرزا ظل‌السلطان بود. او برای داشتن نیروی نظامی خود تلاش فراوان کرد، در اصفهان فوج‌های نظامی با لباس و اسلحه‌ی ارتش اتریش تشکیل داد و برای تربیت آن‌ها از آلمان معلم‌های نظامی استخدام کرد. ناصرالدین شاه از این حرکت ظل‌السلطان بیم داشت پس شبانه از حکومت آن را برکنار کرد و تنها شهر اصفهان را برایش باقی گذاشت. \nاو در 34 حکومت در اصفهان، همه‌ی آثار تاریخی و بناهای دوران صفوی، باغ‌های ایرانی را ویران کرد. پس از اشغال ایران توسط متفقین، اصفهان به محل دعوا و جنگ نیروهای محلی تبدیل شد. در آن دوران شهر به دلیل تأثیر حزب توده نیروی کار فروانی را در خود جای داد و به شهر صنعتی تبدیل شد.</string>
</resources>